# metta

./: .bzrignore  .gitignore  .travis.yml  AUTHORS.txt  CREDITS  README  README.md  apply_boilerplate.rb  apply_license.rb  build_toolchain.sh  cleanbackups  coding_style.txt  index.html  license_header  metta.sublime-project  modelines.txt  scratchpda.txt  waf  wscript
src/: .gdbinit  CMakeLists.txt  Doxyfile  Makefile  README  TODO.short  apply_boilerplate.rb  bochsrc.txt  build_interface_repository.sh  build_toolchain.sh  buildit.sh  clang_config.sh  config.h.cmake  floppy.img  hosted-port.sublime-project  kernel-startup.sublime-project  mac_config.sh  mac_gcc_config.sh  modelines.txt  premake4.lua  qemu.sh  sublime_build.sh  update_image.sh  waf  wscript
src/api/: component_interface.h
src/arch/x86/: cpu.h  debugger.cpp  debugger.h  gdt.h  ia32.h  idt.cpp  idt.h  isr.cpp  isr.h  kickstart.cpp  kickstart.lds  loader.s  memory_manager-arch.h  mmu.h  page_directory.cpp  page_directory.h  page_directory_common.cpp  page_fault_handler.cpp  page_fault_handler.h  panic.cpp  panic.h  segs.h  tss.h  x86_frame_allocator.cpp  x86_frame_allocator.h  x86_protection_domain.cpp  x86_protection_domain.h
src/boot/: interrupt.s  interrupt_descriptor_table.cpp  interrupt_descriptor_table.h  interrupt_service_routine.cpp  loader.ld  loader.s  page_fault_handler.cpp  unpacker.cpp
src/cmake/: cross.toolchain
src/cmake/boards/: raspi.cmake
src/common/: elf.h  elf_loader.h  elf_parser.cpp  elf_parser.h  frame_allocator.cpp  frame_allocator.h  frame_allocator_old.h  glue.c  kickstart.c  list.h  lockable.h  macros.h  memory.h  minmax.h  ordered_array.h  physical_memory_manager.h  protection_domain.h  range_list.h  stretch_driver.cpp  stretch_driver.h  types.h  virtual_address_space.h
src/components/: component.h
src/components/assocfs/: assocfs.h
src/components/interrupt_dispatcher/: interrupt_dispatcher.cpp  interrupt_dispatcher.h  wscript
src/components/portal_manager/: portal_manager.h  wscript
src/components/portals/: DESIGN  portal_mgr.h
src/components/scheduler/: scheduler.cpp  scheduler.h  thread.h
src/components/security_server/: security_server.cpp  security_server.h
src/components/trader/: wscript
src/components/vm_server/: vm_server.h
src/devices/graphics/: README.md
src/devices/network/: README.md
src/images/: bochsrc.txt
src/initcp/: entry.s  initcp.cpp  initcp.ld
src/initfs/: fs.h  initfs.cpp  initfs.h  mk.sh  mkinitfs.cpp  raiifile.h
src/interfaces/: CMakeLists.txt  README.md  activation_dispatcher_factory_v1.if  activation_dispatcher_v1.if  activation_v1.if  binder_callback_v1.if  binder_v1.if  chained_handler_v1.if  channel_notify_v1.if  channel_v1.if  choice_v1.if  client_frame_allocator_interface.cpp  client_frame_allocator_interface.h  closure.if  domain_v1.if  entry.cpp  enum_v1.if  event_v1.if  events_v1.if  exports_table_v1.if  fault_handler_v1.if  frame_allocator.if  frame_allocator_impl.h  frame_allocator_interface.cpp  frame_allocator_interface.h  frame_allocator_v1.if  frames_module.if  frames_module_impl.h  frames_module_interface.cpp  frames_module_interface.h  frames_module_v1.if  gatekeeper_factory_v1.if  gatekeeper_v1.if  heap_factory_v1.if  heap_module_v1.if  heap_v1.if  idc_client_binding_v1.if  idc_offer_v1.if  idc_service_v1.if  idc_v1.if  (+58 more)
src/interfaces/nemesis/: exception_support_setjmp_v1.if  exception_support_v1.if  exception_system_v1.if  exception_v1.if
src/kernel/: CMakeLists.txt
src/kernel/api/: component_interface.h  nucleus.h  stretch_allocator.h
src/kernel/generic/: README.md  any.h  atomic.h  console.cpp  console.h  debugmacros.h  doubly_linked_list.h  elf.h  elf_loader.cpp  elf_loader.h  elf_parser.cpp  elf_parser.h  frame.cpp  frame.h  frame_allocator.h  linker.cpp  loader.cpp  loader.h  lockable.h  macros.h  memory.h  module_loader.cpp  module_loader.h  process.h  protection_domain.h  range_list.h  registers.h  symbol_table_finder.h  syscalls.h  types.h  vcpu.h  vcpu_scheduler.h
src/kernel/legacy/: bitmap_page_allocator.cpp  component.h  glue.c  heap.cpp  heap.h  initcp.ld  memory_manager.cpp  memory_manager.h  nucleus.cpp  nucleus.h  nucleus.lds  ordered_array.h  process.h  stretch_driver.cpp  stretch_driver.h  symbol.h  syscalls.h  vcpu.h  (+2 more)
src/launcher/: CMakeLists.txt  loader.cpp  loader.h
src/lib/: atomic_count.h  default_console.cpp  default_console.h  elf.h  elf_parser.cpp  elf_parser.h  frame.h  frame_allocator.h  macros.h  mapping.h  memory.h  minmax.h  multiboot.cpp  multiboot.h  ordered_array.h  panic.cpp  panic.h  pmm.cpp  registers.h  registers.s  security.h  x86.h
src/modules/: CMakeLists.txt  README.md  component.lds  heap_allocator.h  heap_new.cpp  heap_new.h  module-crt0.s  module-entry.cpp  wscript
src/nucleus/: CMakeLists.txt  README.md  nucleus.h
src/platform/: README
src/runtime/: CMakeLists.txt  EXTERNAL_LIBRARIES  MersenneTwister.h  README.md  c++ctors.h  clang_patched_stdint.h  cstring.cpp  cstring.h  dummy_delete.cpp  event_counts.h  frame_alloc.cpp  g++support.cpp  hashtables.h  heap_allocator.h  memutils.cpp  memutils.h  new.cpp  new.h  newdelete.cpp  newdelete.h  osstring.h  placement_new.cpp  raiifile.h  required_features.h  runtime_stl_pieces.txt  setjmp.nasm  setjmp.s  stdcrap.h  stdio.h  stdlib.cpp  string.cpp  string.h  stringref.h  stringstuff.h  time.h
src/tests/: CMakeLists.txt  bench.cpp  ctype_test.cpp  slebtest.cpp  slebtest.txt  stl_include_test.cpp  test_area_t.cpp  test_bit_array.cpp  test_queue_simple.cpp  test_rbtree.cpp  test_stretch_v1.cpp  test_suite_main.cpp  wscript_build
src/tools/: apply_boilerplate.rb  comp2sym.sh  component_source_check.rb  gen_module  image_mount.sh  image_unmount.sh  license_header  update_image.sh
src/vesper/: Doxyfile  Makefile  TODO.short  bochsrc.txt  elf.h  elf_parser.cpp  elf_parser.h  floppy.img  globals.cpp  globals.h  image_mount.sh  image_unmount.sh  kernel.cpp  linker.ld  update_image.sh  wscript
src/waftools/: clang.py  genpaths.py  if2code.py  meddle.py  module_template.py  toolchain_builder.py  yasm.py
(+1161 files in other folders)
